--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
