--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "firebase": "^9.17.1",
     "localforage": "^1.10.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
