--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.2",
+    "styled-breakpoints": "^11.1.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
